# matrix-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
examples/: main.cpp
include/: matrix.hpp  matrix_cuda.hpp
src/: matrix_cuda.cu
tests/: CMakeLists.txt  catch_main.cpp  test_matrix.cpp  test_matrix_cuda.cpp
